# htk-renderer

./: .gitignore  CMakeLists.txt  Generate Project Files.bat  README.md  Reload Project.bat
CMake/: fetch-dependencies.cmake  files-collector.cmake
Dependencies/: CMakeLists.txt
Dependencies/glad/include/glad/: glad.h
Dependencies/glad/src/: glad.c
Modules/: CMakeLists.txt
Modules/Core/: CMakeLists.txt  HTK_Core.ixx
Modules/Core/Components/include/: Transform.h
Modules/Core/Components/src/: Transform.cpp
Modules/Core/FileHandling/include/: FileHandling.h
Modules/Core/FileHandling/src/: FileHandling.cpp
Modules/Core/SceneObjects/include/: Camera.h
Modules/Core/SceneObjects/src/: Camera.cpp
Modules/Core/exports/: FileHandling.cpp  FileHandling.ixx
Modules/Core/exports/FileHandling/: FileHandling.ixx
Modules/Core/include/: FileHandling.h
Modules/Core/source/: FileHandling.cpp  Transform.cpp
Modules/Core/source/FileHandling/: FileHandling.cpp
Modules/Graphics/: CMakeLists.txt  HTK_Graphics.ixx
Modules/Graphics/exports/: Shaders.ixx
Modules/Graphics/include/: ShaderProgram.h  ShaderStage.h
Modules/Graphics/source/: ShaderProgram.cpp  ShaderStage.cpp  Shaders.cpp
Modules/Utils/: CMakeLists.txt  HTK_Utils.ixx
cmake/: dependencies.cmake
source/: CMakeLists.txt  main.cpp
source/Shaders/: fragment.frag  vertex.vert
